test00/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test00
spec:
  replicas: 4
  selector:
    matchLabels:
      app: test00
  template:
    metadata:
      labels:
        app: test00
    spec:
      containers:
        - name: main
          image: dhltraining.azurecr.io/ondrejsika/training-example
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 20m
              memory: 20Mi
