test00/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test00
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test00.dhltest.sld1.uk
      secretName: test00.dhltest.sld1.uk-tls
  rules:
    - host: test00.dhltest.sld1.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test00
                port:
                  number: 80
